-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
6.7.1
-
None
-
-
d2b4aec86 (dev), 788e9d7fa (6.8), 0f09806ca (6.7)
When a student of Bjarne's tried to follow the installation instructions of https://github.com/villevoutilainen/ProgrammingPrinciplesAndPracticeUsingQt, this happened:
22:58:04: Running steps for project Programming_Qt... 22:58:04: Starting: "C:\Program Files\CMake\bin\cmake.exe" --build C:/PPP3/Qt2/ProgrammingPrinciplesAndPracticeUsingQt/build/Desktop_Qt_6_7_1_MSVC2019_64bit-Debug --target all [1/5 0.2/sec] Building CXX object CMakeFiles\Programming_Qt.dir\Simple_window.cpp.obj FAILED: CMakeFiles/Programming_Qt.dir/Simple_window.cpp.obj C:\PROGRA~1\MICROS~1\2022\COMMUN~1\VC\Tools\MSVC\1439~1.335\bin\HostX64\x64\cl.exe /nologo /TP -DQT_CORE_LIB -DQT_GUI_LIB -DQT_WIDGETS_LIB -DUNICODE -DWIN32 -DWIN64 -D_ENABLE_EXTENDED_ALIGNED_STORAGE -D_UNICODE -D_WIN64 -IC:\PPP3\Qt2\ProgrammingPrinciplesAndPracticeUsingQt\build\Desktop_Qt_6_7_1_MSVC2019_64bit-Debug\Programming_Qt_autogen\include -IC:\PPP3\Qt2\ProgrammingPrinciplesAndPracticeUsingQt\. -external:IC:\Qt\6.7.1\msvc2019_64\include\QtCore -external:IC:\Qt\6.7.1\msvc2019_64\include -external:IC:\Qt\6.7.1\msvc2019_64\mkspecs\win32-msvc -external:IC:\Qt\6.7.1\msvc2019_64\include\QtWidgets -external:IC:\Qt\6.7.1\msvc2019_64\include\QtGui -external:W0 -DQT_QML_DEBUG /DWIN32 /D_WINDOWS /W3 /GR /EHsc /MDd /Zi /Ob0 /Od /RTC1 -std:c++20 /EHsc /W4 /WX -Zc:__cplusplus -permissive- -utf-8 /showIncludes /FoCMakeFiles\Programming_Qt.dir\Simple_window.cpp.obj /FdCMakeFiles\Programming_Qt.dir\ /FS -c C:\PPP3\Qt2\ProgrammingPrinciplesAndPracticeUsingQt\Simple_window.cpp cl : Command line warning D9025 : overriding '/W3' with '/W4' C:\Qt\6.7.1\msvc2019_64\include\QtCore/qcompare.h(228): error C2248: 'Qt::partial_ordering::partial_ordering': cannot access private member declared in class 'Qt::partial_ordering' C:\Qt\6.7.1\msvc2019_64\include\QtCore/qcompare.h(189): note: see declaration of 'Qt::partial_ordering::partial_ordering' C:\Qt\6.7.1\msvc2019_64\include\QtCore/qcompare.h(65): note: see declaration of 'Qt::partial_ordering' C:\Qt\6.7.1\msvc2019_64\include\QtCore/qcompare.h(408): error C2248: 'Qt::partial_ordering::partial_ordering': cannot access private member declared in class 'Qt::partial_ordering' C:\Qt\6.7.1\msvc2019_64\include\QtCore/qcompare.h(189): note: see declaration of 'Qt::partial_ordering::partial_ordering' C:\Qt\6.7.1\msvc2019_64\include\QtCore/qcompare.h(65): note: see declaration of 'Qt::partial_ordering' C:\Qt\6.7.1\msvc2019_64\include\QtCore/qcompare.h(411): error C2248: 'Qt::weak_ordering::weak_ordering': cannot access private member declared in class 'Qt::weak_ordering' C:\Qt\6.7.1\msvc2019_64\include\QtCore/qcompare.h(377): note: see declaration of 'Qt::weak_ordering::weak_ordering' C:\Qt\6.7.1\msvc2019_64\include\QtCore/qcompare.h(220): note: see declaration of 'Qt::weak_ordering' [2/5 0.4/sec] Building CXX object CMakeFiles\Programming_Qt.dir\Programming_Qt_autogen\mocs_compilation.cpp.obj FAILED: CMakeFiles/Programming_Qt.dir/Programming_Qt_autogen/mocs_compilation.cpp.obj C:\PROGRA~1\MICROS~1\2022\COMMUN~1\VC\Tools\MSVC\1439~1.335\bin\HostX64\x64\cl.exe /nologo /TP -DQT_CORE_LIB -DQT_GUI_LIB -DQT_WIDGETS_LIB -DUNICODE -DWIN32 -DWIN64 -D_ENABLE_EXTENDED_ALIGNED_STORAGE -D_UNICODE -D_WIN64 -IC:\PPP3\Qt2\ProgrammingPrinciplesAndPracticeUsingQt\build\Desktop_Qt_6_7_1_MSVC2019_64bit-Debug\Programming_Qt_autogen\include -IC:\PPP3\Qt2\ProgrammingPrinciplesAndPracticeUsingQt\. -external:IC:\Qt\6.7.1\msvc2019_64\include\QtCore -external:IC:\Qt\6.7.1\msvc2019_64\include -external:IC:\Qt\6.7.1\msvc2019_64\mkspecs\win32-msvc -external:IC:\Qt\6.7.1\msvc2019_64\include\QtWidgets -external:IC:\Qt\6.7.1\msvc2019_64\include\QtGui -external:W0 -DQT_QML_DEBUG /DWIN32 /D_WINDOWS /W3 /GR /EHsc /MDd /Zi /Ob0 /Od /RTC1 -std:c++20 /EHsc /W4 /WX -Zc:__cplusplus -permissive- -utf-8 /showIncludes /FoCMakeFiles\Programming_Qt.dir\Programming_Qt_autogen\mocs_compilation.cpp.obj /FdCMakeFiles\Programming_Qt.dir\ /FS -c C:\PPP3\Qt2\ProgrammingPrinciplesAndPracticeUsingQt\build\Desktop_Qt_6_7_1_MSVC2019_64bit-Debug\Programming_Qt_autogen\mocs_compilation.cpp cl : Command line warning D9025 : overriding '/W3' with '/W4' C:\Qt\6.7.1\msvc2019_64\include\QtCore/qcompare.h(228): error C2248: 'Qt::partial_ordering::partial_ordering': cannot access private member declared in class 'Qt::partial_ordering' C:\Qt\6.7.1\msvc2019_64\include\QtCore/qcompare.h(189): note: see declaration of 'Qt::partial_ordering::partial_ordering' C:\Qt\6.7.1\msvc2019_64\include\QtCore/qcompare.h(65): note: see declaration of 'Qt::partial_ordering' C:\Qt\6.7.1\msvc2019_64\include\QtCore/qcompare.h(408): error C2248: 'Qt::partial_ordering::partial_ordering': cannot access private member declared in class 'Qt::partial_ordering' C:\Qt\6.7.1\msvc2019_64\include\QtCore/qcompare.h(189): note: see declaration of 'Qt::partial_ordering::partial_ordering' C:\Qt\6.7.1\msvc2019_64\include\QtCore/qcompare.h(65): note: see declaration of 'Qt::partial_ordering' C:\Qt\6.7.1\msvc2019_64\include\QtCore/qcompare.h(411): error C2248: 'Qt::weak_ordering::weak_ordering': cannot access private member declared in class 'Qt::weak_ordering' C:\Qt\6.7.1\msvc2019_64\include\QtCore/qcompare.h(377): note: see declaration of 'Qt::weak_ordering::weak_ordering' C:\Qt\6.7.1\msvc2019_64\include\QtCore/qcompare.h(220): note: see declaration of 'Qt::weak_ordering' [3/5 0.6/sec] Building CXX object CMakeFiles\Programming_Qt.dir\Window.cpp.obj FAILED: CMakeFiles/Programming_Qt.dir/Window.cpp.obj C:\PROGRA~1\MICROS~1\2022\COMMUN~1\VC\Tools\MSVC\1439~1.335\bin\HostX64\x64\cl.exe /nologo /TP -DQT_CORE_LIB -DQT_GUI_LIB -DQT_WIDGETS_LIB -DUNICODE -DWIN32 -DWIN64 -D_ENABLE_EXTENDED_ALIGNED_STORAGE -D_UNICODE -D_WIN64 -IC:\PPP3\Qt2\ProgrammingPrinciplesAndPracticeUsingQt\build\Desktop_Qt_6_7_1_MSVC2019_64bit-Debug\Programming_Qt_autogen\include -IC:\PPP3\Qt2\ProgrammingPrinciplesAndPracticeUsingQt\. -external:IC:\Qt\6.7.1\msvc2019_64\include\QtCore -external:IC:\Qt\6.7.1\msvc2019_64\include -external:IC:\Qt\6.7.1\msvc2019_64\mkspecs\win32-msvc -external:IC:\Qt\6.7.1\msvc2019_64\include\QtWidgets -external:IC:\Qt\6.7.1\msvc2019_64\include\QtGui -external:W0 -DQT_QML_DEBUG /DWIN32 /D_WINDOWS /W3 /GR /EHsc /MDd /Zi /Ob0 /Od /RTC1 -std:c++20 /EHsc /W4 /WX -Zc:__cplusplus -permissive- -utf-8 /showIncludes /FoCMakeFiles\Programming_Qt.dir\Window.cpp.obj /FdCMakeFiles\Programming_Qt.dir\ /FS -c C:\PPP3\Qt2\ProgrammingPrinciplesAndPracticeUsingQt\Window.cpp cl : Command line warning D9025 : overriding '/W3' with '/W4' C:\Qt\6.7.1\msvc2019_64\include\QtCore/qcompare.h(228): error C2248: 'Qt::partial_ordering::partial_ordering': cannot access private member declared in class 'Qt::partial_ordering' C:\Qt\6.7.1\msvc2019_64\include\QtCore/qcompare.h(189): note: see declaration of 'Qt::partial_ordering::partial_ordering' C:\Qt\6.7.1\msvc2019_64\include\QtCore/qcompare.h(65): note: see declaration of 'Qt::partial_ordering' C:\Qt\6.7.1\msvc2019_64\include\QtCore/qcompare.h(408): error C2248: 'Qt::partial_ordering::partial_ordering': cannot access private member declared in class 'Qt::partial_ordering' C:\Qt\6.7.1\msvc2019_64\include\QtCore/qcompare.h(189): note: see declaration of 'Qt::partial_ordering::partial_ordering' C:\Qt\6.7.1\msvc2019_64\include\QtCore/qcompare.h(65): note: see declaration of 'Qt::partial_ordering' C:\Qt\6.7.1\msvc2019_64\include\QtCore/qcompare.h(411): error C2248: 'Qt::weak_ordering::weak_ordering': cannot access private member declared in class 'Qt::weak_ordering' C:\Qt\6.7.1\msvc2019_64\include\QtCore/qcompare.h(377): note: see declaration of 'Qt::weak_ordering::weak_ordering' C:\Qt\6.7.1\msvc2019_64\include\QtCore/qcompare.h(220): note: see declaration of 'Qt::weak_ordering' [4/5 0.8/sec] Building CXX object CMakeFiles\Programming_Qt.dir\GUI.cpp.obj FAILED: CMakeFiles/Programming_Qt.dir/GUI.cpp.obj C:\PROGRA~1\MICROS~1\2022\COMMUN~1\VC\Tools\MSVC\1439~1.335\bin\HostX64\x64\cl.exe /nologo /TP -DQT_CORE_LIB -DQT_GUI_LIB -DQT_WIDGETS_LIB -DUNICODE -DWIN32 -DWIN64 -D_ENABLE_EXTENDED_ALIGNED_STORAGE -D_UNICODE -D_WIN64 -IC:\PPP3\Qt2\ProgrammingPrinciplesAndPracticeUsingQt\build\Desktop_Qt_6_7_1_MSVC2019_64bit-Debug\Programming_Qt_autogen\include -IC:\PPP3\Qt2\ProgrammingPrinciplesAndPracticeUsingQt\. -external:IC:\Qt\6.7.1\msvc2019_64\include\QtCore -external:IC:\Qt\6.7.1\msvc2019_64\include -external:IC:\Qt\6.7.1\msvc2019_64\mkspecs\win32-msvc -external:IC:\Qt\6.7.1\msvc2019_64\include\QtWidgets -external:IC:\Qt\6.7.1\msvc2019_64\include\QtGui -external:W0 -DQT_QML_DEBUG /DWIN32 /D_WINDOWS /W3 /GR /EHsc /MDd /Zi /Ob0 /Od /RTC1 -std:c++20 /EHsc /W4 /WX -Zc:__cplusplus -permissive- -utf-8 /showIncludes /FoCMakeFiles\Programming_Qt.dir\GUI.cpp.obj /FdCMakeFiles\Programming_Qt.dir\ /FS -c C:\PPP3\Qt2\ProgrammingPrinciplesAndPracticeUsingQt\GUI.cpp cl : Command line warning D9025 : overriding '/W3' with '/W4' C:\Qt\6.7.1\msvc2019_64\include\QtCore/qcompare.h(228): error C2248: 'Qt::partial_ordering::partial_ordering': cannot access private member declared in class 'Qt::partial_ordering' C:\Qt\6.7.1\msvc2019_64\include\QtCore/qcompare.h(189): note: see declaration of 'Qt::partial_ordering::partial_ordering' C:\Qt\6.7.1\msvc2019_64\include\QtCore/qcompare.h(65): note: see declaration of 'Qt::partial_ordering' C:\Qt\6.7.1\msvc2019_64\include\QtCore/qcompare.h(408): error C2248: 'Qt::partial_ordering::partial_ordering': cannot access private member declared in class 'Qt::partial_ordering' C:\Qt\6.7.1\msvc2019_64\include\QtCore/qcompare.h(189): note: see declaration of 'Qt::partial_ordering::partial_ordering' C:\Qt\6.7.1\msvc2019_64\include\QtCore/qcompare.h(65): note: see declaration of 'Qt::partial_ordering' C:\Qt\6.7.1\msvc2019_64\include\QtCore/qcompare.h(411): error C2248: 'Qt::weak_ordering::weak_ordering': cannot access private member declared in class 'Qt::weak_ordering' C:\Qt\6.7.1\msvc2019_64\include\QtCore/qcompare.h(377): note: see declaration of 'Qt::weak_ordering::weak_ordering' C:\Qt\6.7.1\msvc2019_64\include\QtCore/qcompare.h(220): note: see declaration of 'Qt::weak_ordering' ninja: build stopped: subcommand failed. 22:58:09: The process "C:\Program Files\CMake\bin\cmake.exe" exited with code 1. Error while building/deploying project Programming_Qt (kit: Desktop Qt 6.7.1 MSVC2019 64bit) When executing step "Build" 22:58:09: Elapsed time: 00:05.
- is duplicated by
-
QTBUG-123934 C2248 compile error with qcompare.h
-
- Closed
-